Finalize gift creation process

--- a/packages/app/src/lib/styles/tailwind.css
+++ b/packages/app/src/lib/styles/tailwind.css
@@ -14,3 +14,7 @@ input::-webkit-inner-spin-button {
 input[type='number'] {
   -moz-appearance: textfield;
 }
+
+::selection {
+  background: #6e1432;
+}
